Optimized findPeak using CUB reduction and optimized block size for subtractPSF

--- a/tHogbomCleanCuda/Makefile
+++ b/tHogbomCleanCuda/Makefile
@@ -23,8 +23,8 @@
 #
 
 CXX = g++
-CFLAGS = -g -Wall -Wextra -O3 -fstrict-aliasing -fPIC
-INCLUDE = -I/usr/local/cuda/include
+CFLAGS = -Wall -Wextra -O3 -fstrict-aliasing -fPIC
+INCLUDE = -I/usr/local/cuda/include -I../cub/cub
 
 NVCC = nvcc
 NVCCFLAGS = -O3 --compiler-options -fPIC
