--- a/current/tConvolveMPI/Makefile
+++ b/current/tConvolveMPI/Makefile
@@ -20,7 +20,9 @@
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307 USA
 
+# standard MPI c++ compiler
 #CXX=mpicxx
+# cray compiler (e.g. Galaxy)
 CXX=CC
 CFLAGS=-O3 -fstrict-aliasing -fcx-limited-range -Wall -Wextra
 LIBS=
