Added common interface to tConvolve and updated some names in HIP, updated makefiles to use the common interface

--- a/attic/tConvolveACC/Makefile
+++ b/attic/tConvolveACC/Makefile
@@ -48,20 +48,23 @@ endif
 
 all:		tConvolveACC tConvolveDegrid tConvolveCmplxMult
 
+common.o:	../tConvolveCommon/common.cc ../tConvolveCommon/common.h 
+		$(CXX) $(CFLAGS) -c ../tConvolveCommon/common.cc
+
 Stopwatch.o:	Stopwatch.cc Stopwatch.h
 		$(CXX) $(CFLAGS) -c Stopwatch.cc
 
-tConvolveACC:	tConvolveACC.cc Stopwatch.o
+tConvolveACC:	tConvolveACC.cc Stopwatch.o common.o
 		$(CXX) $(CFLAGS) -c tConvolveACC.cc
-		$(CXX) $(CFLAGS) $(LDFLAGS) -o tConvolveACC tConvolveACC.o Stopwatch.o
+		$(CXX) $(CFLAGS) $(LDFLAGS) -o tConvolveACC tConvolveACC.o Stopwatch.o common.o
 
-tConvolveCmplxMult:	tConvolveCmplxMult.cc Stopwatch.o
+tConvolveCmplxMult:	tConvolveCmplxMult.cc Stopwatch.o common.o
 		$(CXX) $(CFLAGS) -c tConvolveCmplxMult.cc
-		$(CXX) $(CFLAGS) $(LDFLAGS) -o tConvolveCmplxMult tConvolveCmplxMult.o Stopwatch.o
+		$(CXX) $(CFLAGS) $(LDFLAGS) -o tConvolveCmplxMult tConvolveCmplxMult.o Stopwatch.o common.o
 
-tConvolveDegrid:	tConvolveDegrid.cc Stopwatch.o
+tConvolveDegrid:	tConvolveDegrid.cc Stopwatch.o common.o
 		$(CXX) $(CFLAGS) -c tConvolveDegrid.cc
-		$(CXX) $(CFLAGS) $(LDFLAGS) -o tConvolveDegrid tConvolveDegrid.o Stopwatch.o
+		$(CXX) $(CFLAGS) $(LDFLAGS) -o tConvolveDegrid tConvolveDegrid.o Stopwatch.o common.o
 
 clean:
 		rm -f *.o tConvolveACC tConvolveDegrid
