--- a/attic/tConvolveCuda/Makefile
+++ b/attic/tConvolveCuda/Makefile
@@ -39,7 +39,7 @@ all:		$(EXENAME) $(LIBNAME)
 %.o:		%.cc %.h
 		$(CXX) $(CFLAGS) -I$(CUDA) -c $<
 
-$(LIBNAME):	CudaGridder.cc CudaGridder.h CudaGridKernel.cu Stopwatch.o
+$(LIBNAME):	CudaGridder.cc CudaGridder.h CudaGridKernel.cu Stopwatch.o common.o
 		nvcc $(NVCCFLAGS) -I$(CUDA) -c CudaGridKernel.cu
 		$(CXX) $(CFLAGS) -I$(CUDA) -c CudaGridder.cc
 		nvcc $(NVCCFLAGS) -shared -o $(LIBNAME) $(LIBOBJS)
