--- a/attic/tConvolveOMP/Makefile
+++ b/attic/tConvolveOMP/Makefile
@@ -26,12 +26,14 @@ CFLAGS=-O3 -fstrict-aliasing -fcx-limited-range -Wall -Wextra -fopenmp
 
 all:		tConvolveOMP
 
-Stopwatch.o:	Stopwatch.cc Stopwatch.h
+common.o:	../tConvolveCommon/common.cc ../tConvolveCommon/common.h 
+		$(CXX) $(CFLAGS) -c ../tConvolveCommon/common.cc
+Stopwatch.o:	Stopwatch.cc Stopwatch.h 
 		$(CXX) $(CFLAGS) -c Stopwatch.cc
 
-tConvolveOMP:	tConvolveOMP.cc Stopwatch.o
+tConvolveOMP:	tConvolveOMP.cc Stopwatch.o common.o
 		$(CXX) $(CFLAGS) -c tConvolveOMP.cc
-		$(CXX) $(CFLAGS) -o tConvolveOMP tConvolveOMP.o Stopwatch.o
+		$(CXX) $(CFLAGS) -o tConvolveOMP tConvolveOMP.o Stopwatch.o common.o
 
 clean:
 		rm -f *.o tConvolveOMP
