--- a/gpuPacer2022/codes/CUDA/gridding/version1/src/CMakeLists.txt
+++ b/gpuPacer2022/codes/CUDA/gridding/version1/src/CMakeLists.txt
@@ -1,2 +1,2 @@
 # Add source to this project's executable.
-add_library (SourceCodeCMake HogbomGolden.cpp HogbomCuda.cu)
+add_library (SourceCodeCMake GridderCPU.cpp GridderGPU.cu gridKernelGPU.cu Setup.cpp)
