Significant update to enable HIP cmake build
The main key update has been to the cmake files. Now this code will run cmake happily with newer versions of rocm. Current tests with <=5.0.2 all failed but 5.4.3 passed. This has to do with issues in older rocms but exaclty what I have not dived into. An example of the issues seen with older rocm is the same as those reported in https://gitlab.kitware.com/cmake/cmake/-/issues/23339

- includes minor update of logging, memory reporting, parallel API   report based on the github.com/pelahi/profile_util repo
- includes a silly work around as cmake build system when using hip will ignore files with the .cu and assume such files have a .hip suffix. To overcome this issue I have just generated soft links to the cu files. Eventually the idea would be to remove the permenant soft links in the repo and just add a macro to generate them upon configuration.

--- a/gpuPacer2022/codes/clean/GPU/CMakeLists.txt
+++ b/gpuPacer2022/codes/clean/GPU/CMakeLists.txt
@@ -14,17 +14,27 @@ macro(askap_option optname optdesc status)
 endmacro()
 
 askap_option(USE_HIP "Attempt to use HIP instead of CUDA" OFF)
+askap_option(USE_AMD "Attempt to use HIP AMD" ON)
 
 # set the GPU langugae and standard
 if (ASKAP_USE_HIP)
+    # Find hip
+    find_package(HIP REQUIRED)
+    # Link with HIP
     enable_language(HIP)
-    add_definitions(USEHIP)
     if(NOT DEFINED CMAKE_HIP_STANDARD)
         set(CMAKE_HIP_STANDARD 17)
         set(CMAKE_HIP_STANDARD_REQUIRED ON)
     endif()
+    add_definitions("-DUSEHIP")
+    add_compile_options("-fPIE")
+    target_link_libraries(hip::device)
+    if (ASKAP_USE_AMD)
+        add_definitions("-D__HIP_PLATFORM_AMD__")
+        set(GPU_TARGETS "gfx90a" CACHE STRING "GPU targets to compile for")
+    endif()
 else()
-    enable_language(CUDA)
+    enable_language(CUDA REQUIRED)
     add_definitions("-DUSECUDA")
     if(NOT DEFINED CMAKE_CUDA_STANDARD)
         set(CMAKE_CUDA_STANDARD 17)
