--- a/gpuPacer2022/codes/clean/GPU/src/Solvers/CMakeLists.txt
+++ b/gpuPacer2022/codes/clean/GPU/src/Solvers/CMakeLists.txt
@@ -1,2 +1,12 @@
 # Add source to this project's executable.
-add_library (SourceCodeCMake Golden.cpp GPUOlder.cu GPUPS.cu GPUPSFullUnroll.cu GPUPSLastWUnrolled.cu)
+add_library (SourceCodeCMake 
+    Golden.cpp 
+    GPUOlder.hip 
+    GPUPS.hip 
+    GPUPSFullUnroll.hip 
+    GPUPSLastWUnrolled.hip
+    GPUOlder.cu 
+    GPUPS.cu 
+    GPUPSFullUnroll.cu 
+    GPUPSLastWUnrolled.cu
+    )
