--- a/gpuPacer2022/codes/clean/GPU/utilities/CMakeLists.txt
+++ b/gpuPacer2022/codes/clean/GPU/utilities/CMakeLists.txt
@@ -1,2 +1,10 @@
 # Add source to this project's executable.
-add_library (UtilitiesCMake ImageProcess.cpp MaxError.cpp WarmupGPU.cu)
+add_library (UtilitiesCMake 
+    ImageProcess.cpp 
+    MaxError.cpp 
+    MemUtil.cpp 
+    ThreadAffinityUtil.cpp 
+    TimeUtil.cpp 
+    WarmupGPU.hip
+    WarmupGPU.cu
+    )
