Bug fix for cmake cuda

--- a/gpuPacer2022/codes/clean/GPU/CMakeLists.txt
+++ b/gpuPacer2022/codes/clean/GPU/CMakeLists.txt
@@ -34,7 +34,8 @@ if (ASKAP_USE_HIP)
         set(GPU_TARGETS "gfx90a" CACHE STRING "GPU targets to compile for")
     endif()
 else()
-    enable_language(CUDA REQUIRED)
+    find_package(CUDA REQUIRED)
+    enable_language(CUDA)
     add_definitions("-DUSECUDA")
     if(NOT DEFINED CMAKE_CUDA_STANDARD)
         set(CMAKE_CUDA_STANDARD 17)
